python_demo_app/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: python-server
  labels:
    app: python-server
spec:
  containers:
  - name: server
    image: python:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
    volumeMounts:
    - mountPath: /python
      name: config
    command: ["python3"]
    args: ["/python/web_server.py"]
  volumes:
  - name: config
    configMap:
      name: python-code
