python_demo_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-server
spec:
  selector:
    app: python-server
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
