python_demo_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-proxy.default-tenant.app.vmdev30.lab.iguazeng.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://auth-proxy.default-tenant.app.vmdev30.lab.iguazeng.com/oauth2/start?rd=$scheme://$http_host$request_uri"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,authorization
  name: mlrun-test-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mlrun-test.default-tenant.app.vmdev30.lab.iguazeng.com
    http:
      paths:
      - backend:
          service:
            name: python-server
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-proxy.default-tenant.app.vmdev30.lab.iguazeng.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://auth-proxy.default-tenant.app.vmdev30.lab.iguazeng.com/oauth2/start?rd=$scheme://$http_host$request_uri"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,authorization
  name: nuclio-test-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: nuclio-test.default-tenant.app.vmdev30.lab.iguazeng.com
    http:
      paths:
      - backend:
          service:
            name: python-server
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
